GLSP-1586: Adjust to new MenuItem API (#265)
* GLSP-1586: Adjust to new MenuItem API

Counterpart to https://github.com/eclipse-glsp/glsp-server-node/pull/116
Part of https://github.com/eclipse-glsp/glsp/issues/1586

* Address review feedback